# unreal-mcp

./: .gitignore  README.md  pyproject.toml  ue_side_mcp_checklist.md
RenderingMCP/: RenderingMCP.uproject
RenderingMCP/Config/: DefaultEngine.ini  DefaultGame.ini
commandlets/: asset_import_commandlet.py
config/: mcp_config.example.json
docs/: README.md  architecture.html  categories.md  commands.md  fix-and-cleanup-checklist.md  inventory.md  legacy-removal-checklist.md  legacy.md  material-graph-ir.md  material-package.md  material-reconstruction-plan.md  parallel.md  proposal.md  test-plan.md  token-measurement-report.md  token-optimization-checklist.md  verification.md  workflow.md
docs/examples/: material-reconstruction-plan-wing_l-layout-v2.json  (+2 more)
scripts/: verify_wingl_alignment.py
tests/: test_contracts.py
unreal_asset/: __init__.py  server.py  tools.py
unreal_backend_tcp/: __init__.py  common.py  connection.py  tools.py
unreal_diagnostics/: __init__.py  server.py  tools.py
unreal_editor_mcp/: __init__.py  common.py  connection.py  server.py  server_internal.py  tools.py
unreal_harness_runtime/: __init__.py  commandlet_exec.py  config.py  python_exec.py  result_format.py
unreal_material/: __init__.py  server.py  tools.py
unreal_material_graph/: __init__.py  ir.py  server.py  tools.py
unreal_observability/: __init__.py  token_usage.py
unreal_orchestrator/: __init__.py  catalog.py  result_store.py  server.py
unreal_renderdoc/: __init__.py  server.py  tools.py
unreal_scene/: __init__.py  server.py  tools.py
(+43 files in other folders)
