[project]
name = "unreal-mcp"
version = "0.1.0"
description = "Standalone Unreal Editor MCP extracted from TAAgent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "unreal_backend_tcp*",
    "unreal_orchestrator*",
    "unreal_scene*",
    "unreal_asset*",
    "unreal_material*",
    "unreal_material_graph*",
    "unreal_diagnostics*",
    "unreal_harness_runtime*",
    "unreal_observability*",
]
